# EMAIL_ALERTS

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: mailer-ci.yaml
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
src/email_alerts/: alert.py  mailer.py
