[tool.poetry]
name = "email-alerts"
version = "0.1.0"
description = "Email alert system for notifying users during CI/CD processes."
authors = ["IdrissMoluh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
ruff = "^0.6.9"
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
